templates/app/assets/stylesheets/chaltron.scss
.flash-container {
  z-index: 100;

  .alert {
    cursor: pointer;
  }
}

#login-box {
  max-width: 300px;

  input#username, input#local_login {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    margin-bottom: -1px;
  }

  input#password, input#local_password {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
}

